@@ -1,3 +1,8 @@
+2002-07-10  Gary Thomas  <gary@chez-thomas.org>
+2002-07-10  Simon Sudler <sudlersn@iis.fhg.de>
+
+	* src/ks5000_ether.c: Fix problems with interrupt names (spelling).
+
 2002-06-14  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/ks5000_ether.c: 
